<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_scanner"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_scanner" />
    <item android:id="@+id/nav_reception"
        android:icon="@drawable/ic_cart_delivery"
        android:title="@string/nav_reception" />
    <item android:id="@+id/nav_picking"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_picking" />
    <item android:id="@+id/nav_albaran"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_albaran" />
    <item android:id="@+id/nav_taller"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_taller" />
</menu>
